# rust-axum-postgres

./: README.md
backend/: Cargo.toml
backend/api-backend/: Cargo.toml
backend/api-backend/src/: error.rs  lib.rs
backend/api-backend/src/user/: mod.rs  routes.rs  services.rs
backend/app-backend/: Cargo.toml
backend/app-backend/src/: main.rs
backend/core-backend/: Cargo.toml
backend/core-backend/src/: config.rs  error.rs
backend/domain-backend/: Cargo.toml
backend/domain-backend/src/user/: mod.rs  request.rs
backend/inftra-backend/: Cargo.toml
backend/inftra-backend/migrations/: 00001_initialized.sql
backend/inftra-backend/src/: error.rs  lib.rs
backend/inftra-backend/src/base/: error.rs  mod.rs
backend/inftra-backend/src/middleware/: auth.rs  ctx_response.rs  error.rs  mod.rs
backend/inftra-backend/src/models/: mod.rs
backend/inftra-backend/src/user/: error.rs  mod.rs
backend/utils-backend/: Cargo.toml
