[package]
name = "api-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = [ "macros" ] }
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.38.1", features = [ "full" ] }
thiserror = "1.0.63"


# Members
inftra-backend = { path = "../inftra-backend" }
domain-backend = { path = "../domain-backend" }
serde_json = "1.0.120"
