[package]
name = "app-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = [ "macros" ] }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.38.1", features = [ "full" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


# Members
core-backend = { path = "../core-backend" }
inftra-backend = { path = "../inftra-backend" }
api-backend = { path = "../api-backend" }
